--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
   </head>
 
-  <body>
+  <body class="body">
+    <header id="header" class="header"></header>
+    <select id="select"></select>
+    <input type="text" id="searchEpisode">
     <div id="root">
+      <div class="card-container"></div>
     </div>
+
+  <footer><a href="https://www.tvmaze.com/">© TVmaze.com</a></footer>
 
     <!-- Loads a provided function called getAllEpisodes() which returns all episodes -->
     <script src="episodes.js"></script>
@@ -18,4 +24,5 @@
     <!-- Loads YOUR javascript code -->
     <script src="script.js"></script>
   </body>
+  
 </html>
