--- a/Megumi(MegumiYanaka).html
+++ b/Megumi(MegumiYanaka).html
@@ -22,7 +22,7 @@
     <script src="episodes.js"></script>
 
     <!-- Loads YOUR javascript code -->
-    <script src="script.js"></script>
+    <script src="script.js"></script><a href="#root">Go to Root</a>
   </body>
   
 </html>
